# DISTRIBUTION-master

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  arbitre.cpp  arbitre.h  jeu.h  main.cpp  man.txt  server.py
joueurs/: CMakeLists.txt  joueur.h  joueur_MCTS.cpp  joueur_MCTS.h  joueur_brutal.cpp  joueur_brutal.h  joueur_random.cpp  joueur_random.h
joueurs/joueur_MCTS_basique/: joueur_MCTS.cpp  joueur_MCTS.h
templates/: index.html
